objects/Device_Gap__c.object
<CustomObject>
    <description>Additional Device Gap information tied to Opportunity Program.</description>
    <fields>
        <fullName>Action_Close_Date_P__c</fullName>
        <inlineHelpText>Previous Action Close Date</inlineHelpText>
        <label>Close(P)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Action_Close_Date__c</fullName>
        <inlineHelpText>Action Close Date</inlineHelpText>
        <label>Close (C)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Action_to_Close_Issue__c</fullName>
        <inlineHelpText>Provide short description of the  Action Item to Close the Issue</inlineHelpText>
        <label>Key Next Steps / Help Needed for Results</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <inlineHelpText>Select the area for the Issue</inlineHelpText>
        <label>Blocking Factor</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Gap_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>TD</fullName>
                </value>
                <value>
                    <fullName>AM / FAE</fullName>
                </value>
                <value>
                    <fullName>PLM</fullName>
                </value>
                <value>
                    <fullName>Fab Ops</fullName>
                </value>
                <value>
                    <fullName>Milestone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copy_of_Impr_C__c</fullName>
        <label>Copy of Impr%(C)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Device_Gap_Comment__c</fullName>
        <description>Label renamed as per TASK-199.</description>
        <label>Gap Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Device_Gap__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if you need to put in Device Gap Comment.</inlineHelpText>
        <label>Is Device Gap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engmt_Step__c</fullName>
        <formula>If (ISBLANK(TEXT(Select_Engagement_Step__c)), &quot;Pick from Select Engagement Step&quot;,   LEFT(TEXT(Select_Engagement_Step__c),1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A = Key Value Proposition / Account Strategy (Achieving Value Prop)
B = DWIN Pre-Product Definition Plan &amp; Resourcing (Schedule for achieving DWIN, Benchmarking)
C. Customer Relationship/Engagement
D. Competing Commercial Agreement</inlineHelpText>
        <label>Engmt Step</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMPL_BX009_Status__c</fullName>
        <formula>IF( GMPL_BX009__c &lt;&gt; &quot;&quot;, TEXT(GMPL_BX009__r.Status__c) &amp;  TEXT(GMPL_BX009__r.BX009_Status__c ), &quot;N/A&quot;)</formula>
        <inlineHelpText>GMPL or BX009 Status</inlineHelpText>
        <label>GMPL/BX009 Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMPL_BX009__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Associate the GMPL or BX009 required to close this gap.</inlineHelpText>
        <label>GMPL/BX009</label>
        <referenceTo>GMPL_BX009__c</referenceTo>
        <relationshipName>Opportunity_Program_Gaps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gap_Sub_Type__c</fullName>
        <label>Gap Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Gap_Type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1st Product TO</fullName>
                </value>
                <value>
                    <fullName>AMS</fullName>
                </value>
                <value>
                    <fullName>Bad Relationship with GF</fullName>
                </value>
                <value>
                    <fullName>Bad Relationship with IBM</fullName>
                </value>
                <value>
                    <fullName>Basic IP</fullName>
                </value>
                <value>
                    <fullName>BEOL</fullName>
                </value>
                <value>
                    <fullName>Close Date</fullName>
                </value>
                <value>
                    <fullName>Competition pricing too aggressive</fullName>
                </value>
                <value>
                    <fullName>Complex IP</fullName>
                </value>
                <value>
                    <fullName>CORES</fullName>
                </value>
                <value>
                    <fullName>Cost Reduction not competitive</fullName>
                </value>
                <value>
                    <fullName>Custom Circuit Layout</fullName>
                </value>
                <value>
                    <fullName>Customer dropped program</fullName>
                </value>
                <value>
                    <fullName>Customer picked incumbent supplier</fullName>
                </value>
                <value>
                    <fullName>Cycle time / DPML too long</fullName>
                </value>
                <value>
                    <fullName>DFM</fullName>
                </value>
                <value>
                    <fullName>DRC</fullName>
                </value>
                <value>
                    <fullName>End customer dictates not to use GF</fullName>
                </value>
                <value>
                    <fullName>Fab 1</fullName>
                </value>
                <value>
                    <fullName>Fab 10</fullName>
                </value>
                <value>
                    <fullName>Fab 7</fullName>
                </value>
                <value>
                    <fullName>Fab 8</fullName>
                </value>
                <value>
                    <fullName>Fab 9</fullName>
                </value>
                <value>
                    <fullName>FEOL</fullName>
                </value>
                <value>
                    <fullName>GF does not have capacity</fullName>
                </value>
                <value>
                    <fullName>Good Relationship with Competitor</fullName>
                </value>
                <value>
                    <fullName>Inferior to competition</fullName>
                </value>
                <value>
                    <fullName>IOs</fullName>
                </value>
                <value>
                    <fullName>IP not available</fullName>
                </value>
                <value>
                    <fullName>LVS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gap_Type__c</fullName>
        <label>Gap Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASIC</fullName>
                </value>
                <value>
                    <fullName>Capacity limitation</fullName>
                </value>
                <value>
                    <fullName>Customer Relationship</fullName>
                </value>
                <value>
                    <fullName>Customer require second source</fullName>
                </value>
                <value>
                    <fullName>Customer support</fullName>
                </value>
                <value>
                    <fullName>Design Partner</fullName>
                </value>
                <value>
                    <fullName>Device performance / Inadequate technology</fullName>
                </value>
                <value>
                    <fullName>IP</fullName>
                </value>
                <value>
                    <fullName>MPW / Prototyping</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PDK</fullName>
                </value>
                <value>
                    <fullName>Price / Cost</fullName>
                </value>
                <value>
                    <fullName>Process / Yield / Quality / Reliability</fullName>
                </value>
                <value>
                    <fullName>Milestone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gating__c</fullName>
        <inlineHelpText>Is this Gap gating an Opportunity Design Win from the Customer?</inlineHelpText>
        <label>Gating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Improve_Prob_P__c</fullName>
        <inlineHelpText>Previous Improves Probability% (Status between Stages)</inlineHelpText>
        <label>Impr%(P)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Improve_Prob__c</fullName>
        <inlineHelpText>Improves Probability% (Status between Stages)</inlineHelpText>
        <label>Impr%(C)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Issue_Comments__c</fullName>
        <description>Label renamed as per TASK-199.</description>
        <inlineHelpText>Provide short comment about the issues. This will be used in the Demand Gen report. 255 char limit.</inlineHelpText>
        <label>Issue/Comments</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <inlineHelpText>SPICE Model Availability Date</inlineHelpText>
        <label>SPICE Model</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Need_by_Date__c</fullName>
        <inlineHelpText>Date Solution is Required.</inlineHelpText>
        <label>Need by Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Probability__c</fullName>
        <formula>Opportunity__r.Total_Improvement_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Opportunity Issue Probability (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Opportunity Program tied to this Device Gap.</description>
        <label>Opportunity Program</label>
        <referenceTo>Opportunity_Program__c</referenceTo>
        <relationshipName>Device_Gaps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Opportunity_Program_Gaps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Action_Close_Date__c</fullName>
        <label>Original Action Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>$User.FirstName + &quot; &quot;+ &quot; &quot; +$User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Device_Gaps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PDK_Availability__c</fullName>
        <description>PDK Availability Date</description>
        <label>PDK Availability</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Status__c</fullName>
        <inlineHelpText>Previous Report Status.</inlineHelpText>
        <label>Previous Status (P)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>G - Major Issue. Action in Place, High Conf of Closure. Date Not in Critical Path</fullName>
                </value>
                <value>
                    <fullName>Y - Major Issue, Action in Place, Med Conf of Closure. Date in Critical Path</fullName>
                </value>
                <value>
                    <fullName>R1 - Blocked Major Issues Need Resolved</fullName>
                </value>
                <value>
                    <fullName>R2 - Major Issue, Action in Critical Path to Revenue with Low/Med Prob</fullName>
                </value>
                <value>
                    <fullName>R3 - Help Requested from Council</fullName>
                </value>
                <value>
                    <fullName>B - Major Issue Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <description>Qualification Date of Deliverables</description>
        <label>Qualification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Needed_by_Date__c</fullName>
        <inlineHelpText>When does the customer need a response?</inlineHelpText>
        <label>Response Needed by Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Provided_on_Date__c</fullName>
        <inlineHelpText>Date that GF provided Customer a response.</inlineHelpText>
        <label>Response Provided on Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Will_Be_Provided_by_Date__c</fullName>
        <inlineHelpText>Date that GF will respond to the customer&apos;s request, issue, case etc.</inlineHelpText>
        <label>Response Will Be Provided by Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revision_Number__c</fullName>
        <label>Revision Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Select_Engagement_Step__c</fullName>
        <inlineHelpText>Select the Step in the Engagement That Applies to this Issue</inlineHelpText>
        <label>Select Engagement Step</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A. Key Value Proposition / Account Strategy (Achieving Value Prop)</fullName>
                </value>
                <value>
                    <fullName>B. DWIN Pre-Product Definition Plan &amp; Resourcing (Schedule for achieving DWIN, Benchmarking)</fullName>
                </value>
                <value>
                    <fullName>C. Customer Relationship/Engagement</fullName>
                </value>
                <value>
                    <fullName>D. Competing Commercial Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Select_Status__c</fullName>
        <inlineHelpText>Select the Status to Indicate the Report Status.</inlineHelpText>
        <label>Select Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>G - Major Issue. Action in Place, High Conf of Closure. Date Not in Critical Path</fullName>
                    <color>#009900</color>
                    <label>G - Major Issue. Action in Place, High Conf of Closure. Date Not in Critical Path</label>
                </value>
                <value>
                    <fullName>Y - Major Issue, Action in Place, Med Conf of Closure. Date in Critical Path</fullName>
                    <color>#F3D904</color>
                    <label>Y - Major Issue, Action in Place, Med Conf of Closure. Date in Critical Path</label>
                </value>
                <value>
                    <fullName>R1 - Blocked Major Issues Need Resolved</fullName>
                    <color>#FF6666</color>
                    <label>R1 - Blocked Major Issues Need Resolved</label>
                </value>
                <value>
                    <fullName>R2 - Major Issue, Action in Critical Path to Revenue with Low/Med Prob</fullName>
                    <color>#FF0000</color>
                    <label>R2 - Major Issue, Action in Critical Path to Revenue with Low/Med Prob</label>
                </value>
                <value>
                    <fullName>R3 - Help Requested from Council</fullName>
                    <color>#CC0000</color>
                    <label>R3 - Help Requested from Council</label>
                </value>
                <value>
                    <fullName>B - Major Issue Closed</fullName>
                    <color>#0B6FCE</color>
                    <label>B - Major Issue Closed</label>
                </value>
                <value>
                    <fullName>M - Milestone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Available_by__c</fullName>
        <inlineHelpText>Date Solution is Available by.</inlineHelpText>
        <label>Solution Available by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Solution_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Individual responsible for the owner.</inlineHelpText>
        <label>Solution Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Program_Gaps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solution_Provided_on_Date__c</fullName>
        <inlineHelpText>The date the Solution or Delivery was provided to the customer.</inlineHelpText>
        <label>Solution Provided on Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <inlineHelpText>Provide the Solution to address the Gap.</inlineHelpText>
        <label>Solution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <inlineHelpText>Identify the Stage of the Issue Resolution</inlineHelpText>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Gap Confirmed</fullName>
                </value>
                <value>
                    <fullName>Solution Viable</fullName>
                </value>
                <value>
                    <fullName>Solution Approved</fullName>
                </value>
                <value>
                    <fullName>Solution Delivered</fullName>
                </value>
                <value>
                    <fullName>Not Needed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StatusP_with_sorting__c</fullName>
        <formula>IF (CONTAINS (TEXT (Previous_Status__c), &quot;G -&quot;), &quot;D&quot;, 
IF (CONTAINS (TEXT(Previous_Status__c), &quot;Y -&quot;), &quot;B&quot;, 
IF (CONTAINS (TEXT (Previous_Status__c), &quot;R1 -&quot;), &quot;A3&quot;, 
IF (CONTAINS (TEXT (Previous_Status__c), &quot;R2 -&quot;), &quot;A2&quot;, 
IF (CONTAINS (TEXT (Previous_Status__c), &quot;R3 -&quot;), &quot;A1&quot;, 
IF (CONTAINS (TEXT (Previous_Status__c), &quot;B -&quot;), &quot;C&quot;,&quot;&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>StatusP with sorting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_BgColor__c</fullName>
        <formula>IF (CONTAINS (TEXT (Select_Status__c), &quot;G -&quot;), &apos;background-color: green;&apos;, 
IF (CONTAINS (TEXT(Select_Status__c), &quot;Y -&quot;), &apos;background-color: yellow;&apos;, 
IF (CONTAINS (TEXT (Select_Status__c), &quot;R1 -&quot;), &apos;background-color: red;&apos;, 
IF (CONTAINS (TEXT (Select_Status__c), &quot;R2 -&quot;), &apos;background-color: red;&apos;, 
IF (CONTAINS (TEXT (Select_Status__c), &quot;R3 -&quot;), &apos;background-color: red;&apos;, 
IF (CONTAINS (TEXT (Select_Status__c), &quot;B -&quot;), &apos;background-color: blue;&apos;,
IF (CONTAINS (TEXT (Select_Status__c), &quot;M -&quot;), &apos;background-color: black;&apos;,&quot;&quot;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status BgColor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_P_BgColor__c</fullName>
        <formula>IF (CONTAINS (TEXT (Previous_Status__c), &quot;G -&quot;), &apos;background-color: green;&apos;, 
IF (CONTAINS (TEXT(Previous_Status__c), &quot;Y -&quot;), &apos;background-color: yellow;&apos;, 
IF (CONTAINS (TEXT (Previous_Status__c), &quot;R1 -&quot;), &apos;background-color: red;&apos;, 
IF (CONTAINS (TEXT (Previous_Status__c), &quot;R2 -&quot;), &apos;background-color: red;&apos;, 
IF (CONTAINS (TEXT (Previous_Status__c), &quot;R3 -&quot;), &apos;background-color: red;&apos;, 
IF (CONTAINS (TEXT (Previous_Status__c), &quot;B -&quot;), &apos;background-color: blue;&apos;,&quot;&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status (P) BgColor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_P__c</fullName>
        <formula>IF (CONTAINS (TEXT (Previous_Status__c), &quot;G -&quot;), IMAGE (&quot;/resource/Dot_G&quot;,&quot;&quot;,16,18), 
IF (CONTAINS (TEXT(Previous_Status__c), &quot;Y -&quot;), IMAGE (&quot;/resource/Dot_Y&quot;,&quot;&quot;,16,18), 
IF (CONTAINS (TEXT (Previous_Status__c), &quot;R1 -&quot;), IMAGE (&quot;/resource/Dot_R1&quot;,&quot;&quot;,16,18), 
IF (CONTAINS (TEXT (Previous_Status__c), &quot;R2 -&quot;), IMAGE (&quot;/resource/Dot_R2&quot;,&quot;&quot;,16,18), 
IF (CONTAINS (TEXT (Previous_Status__c), &quot;R3 -&quot;), IMAGE (&quot;/resource/Dot_R3&quot;,&quot;&quot;,16,18), 
IF (CONTAINS (TEXT (Previous_Status__c), &quot;B -&quot;), IMAGE (&quot;/resource/Dot_B&quot;,&quot;&quot;,16,18),&quot;&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This was the Status of the Issue when last presented in Executive Review. This status is updated from current status manually once the Executive Review is completed. Only those with with Executive Review Admin rights can make the changes.</inlineHelpText>
        <label>Stat (P)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_With_sorting__c</fullName>
        <formula>IF (CONTAINS (TEXT (Select_Status__c), &quot;G -&quot;), &quot;D&quot;, 
IF (CONTAINS (TEXT(Select_Status__c), &quot;Y -&quot;), &quot;B&quot;, 
IF (CONTAINS (TEXT (Select_Status__c), &quot;R1 -&quot;), &quot;A3&quot;, 
IF (CONTAINS (TEXT (Select_Status__c), &quot;R2 -&quot;), &quot;A2&quot;, 
IF (CONTAINS (TEXT (Select_Status__c), &quot;R3 -&quot;), &quot;A1&quot;, 
IF (CONTAINS (TEXT (Select_Status__c), &quot;B -&quot;), &quot;C&quot;,&quot;&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status With Sorting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF (CONTAINS (TEXT (Select_Status__c), &quot;Y -&quot;), IMAGE (&quot;/resource/Dot_Y&quot;,&quot;&quot;,16,18),
    IF (CONTAINS (TEXT(Select_Status__c), &quot;G -&quot;), IMAGE (&quot;/resource/Dot_G&quot;,&quot;&quot;,16,18),
       IF (CONTAINS (TEXT (Select_Status__c), &quot;R1 -&quot;), IMAGE (&quot;/resource/Dot_R1&quot;,&quot;&quot;,16,18),
           IF (CONTAINS (TEXT (Select_Status__c), &quot;R2 -&quot;), IMAGE (&quot;/resource/Dot_R2&quot;,&quot;&quot;,16,18),
              IF (CONTAINS (TEXT (Select_Status__c), &quot;R3 -&quot;), IMAGE (&quot;/resource/Dot_R3&quot;,&quot;&quot;,16,18),
				  IF (CONTAINS (TEXT (Select_Status__c), &quot;M -&quot;), IMAGE (&quot;/resource/Dot_M&quot;,&quot;&quot;,16,18),
					 IF (CONTAINS (TEXT (Select_Status__c), &quot;B -&quot;), IMAGE (&quot;/resource/Dot_B&quot;,&quot;&quot;,16,18),&quot;&quot;)))))))</formula>
        <inlineHelpText>Use &quot;Select Status&quot; field to change the color code. This is Current Status.</inlineHelpText>
        <label>Stat (C)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sum_of_Probability__c</fullName>
        <formula>Opportunity__r.Probability  +  Opportunity_Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum of Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sum_of_issues__c</fullName>
        <formula>IF(Opportunity__r.Total_Improvement_Percentage__c+Opportunity__r.Probability&lt;1.0,&apos;Sum of probability is less than 100%&apos;,IMAGE(&quot;/resource/OppIssuesImage&quot;, &quot;Create PDF&quot;,60,70) )</formula>
        <label>Sum of issues</label>
        <type>Text</type>
    </fields>
    <label>Opportunity Issue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Opportunity_Program__c</columns>
        <columns>NAME</columns>
        <columns>Gap_Type__c</columns>
        <columns>Gap_Sub_Type__c</columns>
        <columns>Device_Gap_Comment__c</columns>
        <columns>Owner__c</columns>
        <columns>Device_Gap__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>IS-{000000}</displayFormat>
        <label>Issue Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Issues</pluralLabel>
    <recordTypes>
        <fullName>Read_Only</fullName>
        <active>true</active>
        <description>The purpose of this record type is to make all fields read only on the page layout. Device Gap will be set to ‘Read Only’ when the related Opportunity record is set to ‘Void’.</description>
        <label>Read Only</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Improve_Probability_Percentage_Creation</fullName>
        <active>false</active>
        <description>Impr%(C) + Opp Probability (%) is not more than 100% on Create/Edit of &quot;Opportunity Issue&quot; record</description>
        <errorConditionFormula>AND(ISNEW(),
(Improve_Prob__c + 
BLANKVALUE(Opportunity__r.Total_Improvement_Percentage__c, 0) + 
Opportunity__r.Probability ) &gt; 1.00
)</errorConditionFormula>
        <errorDisplayField>Improve_Prob__c</errorDisplayField>
        <errorMessage>Sum of Impr%(C) and Opportunity Probability (%) Can&apos;t be more than 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Improve_Probability_Percentage_Update</fullName>
        <active>false</active>
        <errorConditionFormula>AND
(
ISCHANGED(Improve_Prob__c),
(Sum_of_Probability__c-( Copy_of_Impr_C__c - Improve_Prob__c)) &gt; 1.00
)</errorConditionFormula>
        <errorDisplayField>Improve_Prob__c</errorDisplayField>
        <errorMessage>Sum of Impr%(C) for all Opportunity Issue and Opportunity Probability (%) Can&apos;t be more than 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Issue_Creation</fullName>
        <active>false</active>
        <description>Opportunity_Issue_Creation Cannot be done if its in Discovery</description>
        <errorConditionFormula>ISNEW() &amp;&amp;  ISPICKVAL(  Opportunity__r.StageName , &quot;1. Discovery&quot;)</errorConditionFormula>
        <errorMessage>Opportunity Issues can only be create in Stage 2 or later</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_and_Opportunity_Program_Name</fullName>
        <active>true</active>
        <errorConditionFormula>Opportunity_Program__r.Opportunity__c  &lt;&gt;  Opportunity__c</errorConditionFormula>
        <errorMessage>Opportunity program should be part of selected opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Device_Gap_Comment</fullName>
        <active>false</active>
        <description>Requires device gap comment when device gap checkbox is selected.

Turned off as per TASK-199.</description>
        <errorConditionFormula>AND( Device_Gap__c, ISBLANK( Device_Gap_Comment__c ))</errorConditionFormula>
        <errorDisplayField>Device_Gap_Comment__c</errorDisplayField>
        <errorMessage>Device Gap Comment is required when Device Gap checkbox is selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Stage_Not_NONE</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Stage__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Stage__c</errorDisplayField>
        <errorMessage>Stage cannot be None</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unrequire_Device_Gap_Comment</fullName>
        <active>false</active>
        <description>Do not require device gap comment when device gap checkbox is unselected.

Turned off as per TASK-199.</description>
        <errorConditionFormula>AND( NOT(Device_Gap__c), NOT(ISBLANK( Device_Gap_Comment__c )))</errorConditionFormula>
        <errorDisplayField>Device_Gap_Comment__c</errorDisplayField>
        <errorMessage>Device Gap Comment is only required when Device Gap checkbox is selected.</errorMessage>
    </validationRules>
</CustomObject>